--- a/src/index.css
+++ b/src/index.css
@@ -315,6 +315,19 @@
   .animation-delay-800 {
     animation-delay: 0.8s;
   }
+
+  /* 3D Transform utility */
+  .perspective-1000 {
+    perspective: 1000px;
+  }
+
+  .rotate-y-6 {
+    transform: rotateY(6deg);
+  }
+
+  .hover\:rotate-y-6:hover {
+    transform: rotateY(6deg);
+  }
 }
 
 /* Scrollbar styling */
